<resources>
    <string name="app_name">StudyCircle</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ya_tienes_una_cuenta">¿Ya tienes una cuenta?</string>
    <string name="registrarme">Registrarme</string>
    <string name="o">o</string>
    <string name="nombre_completo">Nombre completo</string>
    <string name="username">Username</string>
    <string name="correo_electr_nico">Correo Electrónico</string>
    <string name="contrase_a">Contraseña</string>
    <string name="repita_la_contrase_a">Repita la contraseña</string>
    <string name="reenviar_email">Reenviar Email</string>
    <string name="se_ha_enviado_un_correo">Se ha enviado un correo electrónico a la dirección indicada en el proceso de registro, por favor, verifique su identidad</string>
    <string name="verificar_cuenta">Verificar Cuenta</string>
    <string name="ya_he_verificado">Ya he verificado</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="registrarse">Registrarse</string>
    <string name="olvidado_contrasena">¿Has olvidado la contraseña?</string>
    <string name="home" />
    <string name="dashboard" />
    <string name="notifications" />
    <string name="alumno">Alumno</string>
    <string name="configurai_n_de_perfil">Configuración del perfil</string>
    <string name="nivel_de_estudios">Nivel de Estudios</string>
    <string name="seleccione_un_nivel_de_estudios">Seleccione un nivel de estudios</string>
    <string name="materias_en_las_que_buscas_ayuda">Materias en las que buscas ayuda</string>
    <string name="creaci_n_de_perfiles">Creación de Perfiles</string>
    <string name="explicacion_creacion_perfiles">En StudyCircle, nuestra misión es fomentar el desarrollo y la cooperación entre nuestros usuarios. Nos enorgullece ser una de las comunidades más solidarias y unidas en el panorama actual de la educación. Para alcanzar este objetivo, ofrecemos a nuestros usuarios la opción de crear dos tipos de perfiles: &lt;b&gt;ALUMNO&lt;/b&gt; y &lt;b&gt;TUTOR&lt;/b&gt;. De este modo, no solo proporcionamos la oportunidad de recibir clases, sino también de impartirlas. Esta es nuestra forma de promover un ambiente de aprendizaje interactivo y recíproco.</string>
    <string name="configurar_perfil_alumno">Configurar Perfil Alumno</string>
    <string name="configurar_perfil_tutor">Configurar Perfil Tutor</string>
    <string name="aceptar">Aceptar</string>
    <string name="tutor">Tutor</string>
    <string name="materias_que_puedes_impartir">Materias que puedes impartir</string>
    <string name="agregar">Agregar</string>
    <string name="tabl_n_de_anuncios">Tablón de Anuncios</string>
    <string name="buscar_usuarios">Buscar Usuarios</string>
    <string name="configuraci_n">Configuración</string>
    <string name="cerrar_sesi_n">Cerrar Sesión</string>
    <string name="opciones">Opciones</string>
    <string name="home_nav">Home</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="chats">Chats</string>
    <string name="perfil_de_tutor">Perfil de tutor</string>
    <string name="perfil_de_alumno">Perfil de alumno</string>
    <string name="friends_count">%1$s Amistades</string>
    <string name="curso">Curso</string>
    <string name="cursos">Cursos</string>
    <string name="_0_cursos">%1$s cursos</string>
    <string name="_0_alumnos">%1$s alumnos</string>
    <string name="materia_">Materia: %1$s</string>
    <string name="tutor_">Tutor: %1$s</string>
    <string name="_0_actividades_pendientes">%1$s actividades pendientes</string>
    <string name="goback"><![CDATA[<-]]></string>
    <string name="goahead"><![CDATA[->]]></string>
    <string name="seleccione_la_materia_relacionada_al_anuncio">Seleccione la materia relacionada al anuncio</string>
    <string name="seleccione_la_materia_relacionada_al_curso">Seleccione la materia relacionada al curso</string>
    <string name="alertas_de_nuevas_actividades">Alertas de nuevas actividades</string>
    <string name="invitaciones_a_cursos">Invitaciones a cursos</string>
    <string name="solicitudes_de_amistad">Solicitudes de amistad</string>
</resources>