<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AlumnoConfFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="70dp">

            <ImageView
                android:id="@+id/btnAtras"
                android:layout_marginTop="15dp"
                android:layout_marginStart="15dp"
                android:layout_width="37dp"
                android:layout_height="37dp"
                android:src="@drawable/ic_exit" />
        </FrameLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:fontFamily="@font/poppins_medium"
                android:gravity="start|center"
                android:paddingStart="30dp"
                android:paddingEnd="0dp"
                android:text="@string/alumno"
                android:textColor="#272727"
                android:textSize="24sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:fontFamily="@font/poppins_medium"
                android:gravity="start|center"
                android:paddingStart="32dp"
                android:paddingEnd="0dp"
                android:text="@string/configurai_n_de_perfil"
                android:textColor="#272727"
                android:textSize="14sp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:paddingTop="25dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:fontFamily="@font/poppins_medium"
                    android:layout_gravity="center"
                    android:text="@string/nivel_de_estudios"
                    android:textColor="#1566e0"
                    android:textSize="12sp"/>
                <AutoCompleteTextView
                    android:id="@+id/autoCompleteTextView"
                    android:layout_width="250dp"
                    android:fontFamily="@font/poppins_medium"
                    android:layout_gravity="center"
                    android:textSize="10sp"
                    android:textColor="#131313"
                    android:layout_height="wrap_content"
                    android:hint="@string/seleccione_un_nivel_de_estudios"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:paddingTop="25dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:paddingTop="20dp"
                    android:fontFamily="@font/poppins_medium"
                    android:layout_gravity="center"
                    android:text="@string/materias_en_las_que_buscas_ayuda"
                    android:textColor="#1566e0"
                    android:textSize="12sp"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView"
                    android:layout_width="250dp"
                    android:layout_gravity="center"
                    android:layout_height="142dp"
                    android:clipToPadding="false"
                    android:scrollbars="vertical" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/btnAceptar"
                    android:layout_gravity="center|bottom"
                    android:layout_width="150dp"
                    android:layout_height="45dp"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/button_background2"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="center"
                    android:text="@string/aceptar"
                    android:textColor="#1566e0"
                    android:textSize="12sp"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</FrameLayout>