<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AlertsFragment">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminate="true"
        android:indeterminateTint="#1566e0" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="70dp">

            <ImageView
                android:id="@+id/btnExpand"
                android:layout_marginTop="15dp"
                android:layout_marginStart="15dp"
                android:layout_width="33dp"
                android:layout_height="33dp"
                android:src="@drawable/ic_hamburger" />
        </FrameLayout>

        <TextView
            android:text="@string/notificaciones"
            android:gravity="center_vertical"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:textSize="20sp"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/bluestd"
            android:layout_width="match_parent"
            android:layout_height="40dp"/>

        <TextView
            android:text="@string/solicitudes_de_amistad"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:paddingEnd="5dp"
            android:textSize="15sp"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/bluestd"
            android:layout_width="match_parent"
            android:layout_height="40dp"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/solicitudes_amistad_recyclerView"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="match_parent" />

        <TextView
            android:text="@string/invitaciones_a_cursos"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:paddingEnd="5dp"
            android:textSize="15sp"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/bluestd"
            android:layout_width="match_parent"
            android:layout_height="40dp"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/solicitudes_cursos_recyclerView"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="match_parent" />

        <TextView
            android:text="@string/alertas_de_nuevas_actividades"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:paddingEnd="5dp"
            android:textSize="15sp"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/bluestd"
            android:layout_width="match_parent"
            android:layout_height="40dp"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/alertas_nueva_actividad_recyclerView"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="match_parent" />
    </LinearLayout>
</RelativeLayout>